Bug 54555 - Conditional formatting is lost in .xls files
Summary: Conditional formatting is lost in .xls files
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.1.2 release
Hardware: All All
: medium major
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.7.0 target:3.6.3
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-05 13:20 UTC by Nikos Platis
Modified: 2012-09-29 17:39 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Test document. Created in LO 3.6.1.2. (5.50 KB, application/vnd.ms-excel)
2012-09-19 10:55 UTC, Nikos Platis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nikos Platis 2012-09-05 13:20:55 UTC
Conditional formatting is lost in .xls files, following these steps:

1. Open a .xls file with some conditional formatting
  (Alternatively, create a new file, enter a value in a single cell, apply some conditional formatting to that value, and save as .xls. Then, open this .xls file)

2a. Try to insert a column or row or cell, or delete a column or row or cell. Then conditional formatting is lost -- and you can't make it come back with Undo.

2b. Save the file as .ods. Conditional formatting is lost in the new file.


Observed in both Linux and Windows LO 3.6.1.2.
Did not observe in Windows LO 3.5.6.2.
Comment 1 Markus Mohrhard 2012-09-18 04:36:28 UTC
Can you please attach a test document?
Comment 2 Nikos Platis 2012-09-19 10:55:50 UTC
Created attachment 67374 [details]
Test document. Created in LO 3.6.1.2.
Comment 3 Not Assigned 2012-09-21 23:44:42 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=880773208305b15b521df58245367bc3001d2ce1

set conditional format range for xls import, fdo#54555



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Not Assigned 2012-09-24 15:48:23 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4a3cd86f894334dcef9ab2edb59d167a77fbdf85&g=libreoffice-3-6

set conditional format range for xls import, fdo#54555


It will be available in LibreOffice 3.6.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.