set conditional format range for xls import, fdo#54555

Change-Id: I43d1834d28534fc0ec8cb406e1be7e9f48074da2
Signed-off-by: Kohei Yoshida <kohei.yoshida@gmail.com>